CW-119 Add docstrings to Sponsor related API endpoints
